--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,14 +18,13 @@ h1{
     text-align: center !important;
 }
 h2{
-    font-size: 35px !important; 
+    /* font-size: 35px !important;  */
     font-weight:bold !important;
     text-align: center !important;
 }
 
 
 .navBar{
-    /* position: fixed !important;  */
     z-index:1;
     background:transparent!important;
     border-bottom: 2px solid;
@@ -47,4 +46,48 @@ h2{
 .btnWelcome:hover{
    
     background-color: #e93578;
-}  
+} 
+
+.btnDark{
+    background-color: black;
+    text-decoration: none;
+    padding: 15px 30px 15px 30px;
+    font-size: 20px;
+    color: #FFFFFF;
+    border-radius: 27px;
+    border: none; 
+}
+.category{
+    font-size: 50px; 
+}
+#about{
+    background-color:rgba(233,53,120,0.9); 
+    padding:100px; 
+    width:100vw;
+
+
+}
+
+
+.line{
+    background-color: black;
+    width: 5vw;
+    height: 4px;
+    border: none;
+    margin-top: 5px; 
+    
+
+}
+.description{
+    width: 50vw; 
+}
+.mPerso{
+    margin-top: 40px;
+}
+
+
+#skills{
+    background-color:rgba(0,0,0,0.87); 
+    padding:100px; 
+    width:100vw; 
+}
