Création de la page contact

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,3 +140,15 @@ h2{
     border-top-right-radius: 35px;
     
 }
+
+
+ .contact{
+    /* width: 100vw;
+    height:100vh; */
+    background-image: url("../../img/contact.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    
+
+}
