--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,3 +152,42 @@ h2{
     
 
 }
+
+.btnContact{
+    text-decoration: none;
+    padding: 15px 30px 15px 30px;
+    font-size: 12px;
+    color: #FFFFFF;
+    background-color: #631878;
+    border-radius: 27px;
+    border: none;  
+
+}
+
+.field{
+    background-color: #e93578 !important;
+    border:1 px solid white !important;
+    color: white !important; 
+    border-radius: 35px !important; 
+    
+}
+
+::placeholder { 
+    color:white !important;
+    opacity: 1 !important; 
+    padding-left:1vw; 
+  }
+
+.icone{
+    font-size:5vh; 
+
+}
+
+.icone a{
+    color: black; 
+    
+}
+.icone a:hover{
+    color:#e93578; 
+    
+}
