--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,9 +196,19 @@ h2{
 
 }
 .imgProjectHover{
-    opacity:0.8;
-    transition: opacity 0.9s ;
+    display: flex;
+    z-index: -1; 
+    justify-content: center;
+    align-items: center;
+    background-color: #631878;
+    opacity:0.8; 
+    position: absolute;
+    width: 100%; 
+    height:100%; 
+    border-radius: 35px;
+    transition: all 0.9s ;
 }
+
 .ajcol{
     width:50%;
     padding: 1vw; 
