--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,9 +195,23 @@ h2{
 
 
 }
+.projectTable a{
+    text-decoration: none;
+    color:white; 
+}
+.projectTable a:hover{
+    text-decoration: none;
+    color:white; 
+}
+.hoverDefault{
+    display:none;
+    
+    
+}
+
 .imgProjectHover{
-    display: flex;
-    z-index: -1; 
+    
+    display:flex;
     justify-content: center;
     align-items: center;
     background-color: #631878;
@@ -206,7 +220,7 @@ h2{
     width: 100%; 
     height:100%; 
     border-radius: 35px;
-    transition: all 0.9s ;
+    transition: all 0.9s;
 }
 
 .ajcol{
